# capymind-therapy

./: .gcloudignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yml  deploy.yml
capymind_agent/: __init__.py  agent.py  prompt.py  requirements.txt
capymind_agent/sug_agents/crysis_line/: __init__.py  agent.py  prompt.py
capymind_agent/sug_agents/data_fetcher/: __init__.py  agent.py  prompt.py
capymind_agent/tools/: __init__.py  firestore_data.py  format_data.py
scripts/: deploy_adk_cloud_run.sh  deploy_functions.sh  deployment_account_perms.sh  dev_adk_run.sh  setup_dev_env.sh
session_agent/: agent.py
src/capymind_session/: __init__.py  agent.py  cli.py  gcf.py  safety.py
src/capymind_session/tools/: __init__.py  journal.py  mood.py  strategies.py
tests/: README.md  __init__.py  requirements.txt  run_tests.py  test_config.py  test_firestore_utils.py  test_format_data.py  test_main.py  test_prompts.py  test_simple.py
